base/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: po1-nextjs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: po1-nextjs
  template:
    metadata:
      labels:
        app: po1-nextjs
    spec:
      containers:
      - name: po1-nextjs
        imagePullPolicy: Always
        image: 236731556556.dkr.ecr.eu-west-1.amazonaws.com/po1/po1-nextjs:latest
        ports:
        - name: http
          containerPort: 8080
