base/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: po1-nextjs
spec:
  type: ClusterIP
  selector:
    app: po1-nextjs
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
