base/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: po1-nextjs
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:236731556556:certificate/27f7800b-ac06-4746-9cbe-8bc2d4ea2cdf
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/group.name: po1
    alb.ingress.kubernetes.io/group.order: '4'
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: po1-nextjs.dev.travcorpservices.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-po1-nextjs
                port:
                  name: http
    - host: po1.dev.travcorpservices.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-po1-nextjs
                port:
                  name: http
  tls:
  - hosts:
    - po1-nextjs.dev.travcorpservices.com
    - po1.dev.travcorpservices.com
